@@ -1,6 +1,7 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - add service_groups methods
 
 0.001002  2019-04-23 11:06:31+02:00 Europe/Vienna
     - fix Role::ObjectMethods abstract and list_$object documentation
